# thanawat.xyz

./: .dir-locals.el  .gitignore  CHANGELOG.md  CNAME  README.md  README.org  about.html  about.org  archive.html  config.toml  contact.html  contact.org  default.nix  deployscript  feed.xml  flake.nix  index.css  index.html  justfile  package-lock.json  package.json  robots.txt  rss.xml  search_index.en.js  site.hs  sitemap.xml  styleSheet.css  tailwind.config.js  tailwind.css  thanawat-xyz.cabal  todo.org
_site/: archive.html
_site/css/: tailwind.css
about/: index.html
app/: Atom.hs  Colors.hs  Main.hs  Page.hs  Person.hs  Types.hs
app/Data/Org/: Lucid.hs
app/Page/: About.hs  Components.hs  Index.hs  Page.hs  Post.hs
blog/: index.html
blog/first/: index.html
blog/second/: index.html
content/: about.md
content/blog/: first.md  second.md
css/: default.css  tailwind.css
deploy/: archive.html  contact.html  index.html
deploy/css/: tailwind.css
deploy/posts/: 2020-07-13-syntax-highlighting.html  2020-07-18-emacs.html
js/: ws.js
nix/: sources.json
posts/: 2020-07-07-my-first-post.html  2020-07-07-my-first-post.org  2020-07-13-syntax-highlighting.html  2020-07-18-emacs-installation.org  2020-07-18-emacs.html  2020-07-18-emacs.org  2020-08-11-emacs-for-everyone.org  2020-08-11-emacs-for-everyone.tex  2020-08-12-the-vim-editing-style.org  2020-08-13-learning-emacs.org  2020-08-14-emacs-fundamentals.org  2020-08-14-why-I'm-quitting-social-media.org  birthday.html  emacs-for-everyone-part-2.org  emacs-for-everyone-part-3.html  emacs-for-everyone.html  emacs-fundamentals.html  emacs-installation.html  index.html  my-first-post.html  the-vim-editing-style.html  what-is-free-software.html  why-I'm-quitting-social-media.html
reload/: Main.hs
site/: index.html
site/js/highlight/: highlight.min.js
site/page/: about.org
site/posts/: learning-embedded-rust.org  my-first-post.md  my-first-post.org
site/templates/: post.html
static/: index.css
templates/: about.html  base.html  blog-page.html  blog.html  default.html  index.html  nav.html  post-list.html  post.html
