cabal-version:      2.4
name:               thanawat-xyz
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: source code for my website

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
author: Thanawat Techaumnuaiwit

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable build-site
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Types
                 , Colors
                 , Page
                 , Page.Components
                 , Page.Post
                 , Page.Index
                 , Page.About
                 , Atom

    -- LANGUAGE extensions used by modules in this package.
    default-extensions: OverloadedStrings
                      , ExtendedDefaultRules
    build-depends:    base 
                    , aeson
                    , containers
                    , lens
                    , lens-aeson
                    , shake
                    , text
                    , time
                    , unordered-containers
                    , lucid
                    , org-mode
                    , org-mode-lucid
                    , validation
                    , wai
                    , warp
                    , wai-app-static
                    , directory
                    , tailwind
                    , optics-core
                    , data-default
                    , monad-logger
    hs-source-dirs:   app
                      , app/Page
    default-language: Haskell2010

executable live-reload
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    ghc-options: -threaded -rtsopts -Wall
    build-depends:    base
                    , aeson
                    , containers
                    , lens
                    , lens-aeson
                    , text
                    , time
                    , unordered-containers
                    , wai
                    , warp
                    , wai-app-static
                    , wai-websockets
                    , websockets
                    , fsnotify
                    , http-types
                    , directory
                    , ghcid
    hs-source-dirs:   reload
    default-language: Haskell2010
